--- a/src/Components/styles.scss
+++ b/src/Components/styles.scss
@@ -26,14 +26,6 @@ body {
   display: grid;
 }
 
-ul {
-  padding: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  box-sizing: border-box;
-  justify-content: center;
-  margin: auto;
-}
 
 
 h2,
